@@ -1,5 +1,9 @@
 2003-08-07  Sven Herzberg  <herzi@gnome-de.org>
 
+	* data/Makefile.am: added fixes for kde pre-3.2 (aka stable)
+
+2003-08-07  Sven Herzberg  <herzi@gnome-de.org>
+
 	* .cvsignore: cvs update has less warnings now
 	* configure.in: some beautification (will fix -Wall later this day)
 	* data/.cvsignore: cvs update has less warnings now
